# video-editor-ai

./: .gitignore  main.py  pyproject.toml  start.bat  start.sh
.github/skills/ffmpeg-python/: SKILL.md
.github/skills/pyside6-qt-python/: SKILL.md
app/: main_window.py
app/models/: caption.py
app/utils/: ffmpeg_utils.py  gpu_check.py  srt_utils.py
app/widgets/: caption_table.py  loading_dialog.py  log_viewer.py  video_player.py
app/workers/: batch_worker.py  export_worker.py  transcribe_worker.py  translate_worker.py  tts_worker.py
libs/googletrans/: main.py
libs/khmer_tts/: main.py  pyproject.toml
libs/whisper/: cuda_check.py  main.py  requirements.txt  result.srt
