[project]
name = "khmer-video-editor"
version = "0.1.0"
requires-python = ">=3.9, <=3.11"
dependencies = [
    "googletrans==4.0.0-rc1",
    "openai-whisper",         # speech‑to‑text model
    "setuptools-rust",        # build support for Rust extensions
    "torch",                  # PyTorch core (CUDA build on Win/Linux; MPS-capable build on macOS — see [tool.uv.sources])
    "torchvision",            # computer vision utilities
    "torchaudio",             # audio processing utilities
    "edge-tts",               # Khmer TTS (Microsoft Edge Neural voices)
    "pyside6",                # Qt6 UI framework
    "ffmpeg-python",          # FFmpeg Python bindings for export
    'nvidia-cublas-cu12',
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "pyinstaller",
]

# ---------------------------------------------------------------------------
# uv: platform-aware torch wheel selection.
#
#   Windows / Linux  → CUDA build   (NVIDIA GPU + CUDA Toolkit required)
#   macOS (any arch) → standard PyPI build  (includes MPS for Apple Silicon)
#
# CUDA version: we track the latest stable PyTorch CUDA index.
# When a new PyTorch release adds a newer CUDA build (e.g. cu128, cu130…)
# update ONLY the index URL below — no other changes are needed.
#
# Check for the latest at: https://pytorch.org/get-started/locally/
# Current latest: CUDA 12.6  →  https://download.pytorch.org/whl/cu126
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
# ↓ Update this URL when a newer CUDA build is available.
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
